css/style.css
@font-face {
    font-family: "Blokk";
    src: url("../fonts/BLOKKRegular.ttf");
}

.heading {
  height: 50px;
  z-index: 1;
}

.top {
  background: #212121;
  color: #fff;
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  z-index: 2;
  overflow: hidden;
}
a.menu {
  position: absolute;
  z-index: 3;
  border:1px solid white;
  text-decoration: none;
  top: 1em;
  right: 1.6em;
  color: #fff;
  text-transform: uppercase;
  font-size: 0.65em;
  padding: 0.4em 0.7em;
  border-radius: 4px;
}

a.menu span {
  font-size:1.6em;
  vertical-align: -0.15em;
}

nav ul {
list-style:none;
}

nav ul li a {
display: block;
text-decoration: none;
background: rgba(0,0,0,0.3);
color: white;
padding: 1em; 
margin-bottom: 1px;
}

.detailedDrawer {
  position: relative;
  z-index: 1;
  -webkit-transform: translate3d(0, -350px, 0);
  -moz-transform: translate3d(0, -350px, 0);
  -o-transform: translate3d(0, -350px, 0);
  transform: translate3d(0, -350px, 0);
  -webkit-transition:-webkit-transform 0.25s linear;
  -moz-transition:-moz-transform 0.25s linear;
  -o-transition:-o-transform 0.25s linear;
  transition: transform 0.4s linear, height .30s 0.50s;
  width: 100%;
  -webkit-overflow-scrolling: touch;
  height: 170px;
  background-color: rgba(255, 255, 255, 0.5);
  overflow: hidden;
  margin: 0px;
}
.detailedDrawer.active {
 -webkit-transform: translate3d(0,50px,0);
  -moz-transform: translate3d(0,50px,0);
  -o-transform: translate3d(0,50px,0);
  transform: translate3d(0,50px,0);
  margin: 0px;
  /*z-index: 3;*/
}

.detailedDrawer.high {
  height: 440px;
  transition: height .3s;
}

.btnDetailedDrawer {
  width: 150px;
  margin: 10px;
  height: 20px;
}

#detailedDrawerNavigation {
  width: 350px;
  margin-right: auto;
  margin-left: auto;
}

#previewList {
  height: 150px;
  width: 100%;
  z-index: 1;
  position: absolute;
  top: 0px;
  left: 0px;
  transition: opacity .30s linear;
}

#previewList.disabled {
  opacity: 0;
  z-index: -1;
  transition: opacity .30s .5s linear;
}

#previewList.hidden {
  opacity: 0;
}

.previewDrawer {
  position: relative;
  z-index: 1;
  -webkit-transform: translate3d(0, -350px, 0);
  -moz-transform: translate3d(0, -350px, 0);
  -o-transform: translate3d(0, -350px, 0);
  transform: translate3d(0, -350px, 0);
  -webkit-transition:-webkit-transform 0.25s linear;
  -moz-transition:-moz-transform 0.25s linear;
  -o-transition:-o-transform 0.25s linear;
  transition:transform 0.25s linear;
  /*border-style: solid;
  border-width: 2px;*/
  width: 100%;
  -webkit-overflow-scrolling: touch;
}
.previewDrawer.active {
 -webkit-transform: translate3d(0,50px,0);
  -moz-transform: translate3d(0,50px,0);
  -o-transform: translate3d(0,50px,0);
  transform: translate3d(0,50px,0);
  /*z-index: 3;*/
  margin: 0px;
}

/* Fallbacks */

.no-csstransforms .top {
  position: static;
}

.no-csstransforms .drawer nav {
  display: none;
}

.no-csstransforms .drawer.active nav {
  display: block;
}

* {
  padding: 0;
  margin: 0;
  border: 0;
}

body {
  background: #eee;
  /*padding: 15px;*/
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

#detailList {
  width: auto;
  height: 400px;
  margin: 0px;
  background: #457;
  cursor: -moz-grab;
  cursor: -webkit-grab;
  cursor: grab;
  opacity: 0;
  /*transition: opacity .30s linear;*/
  transform: translate3d(0px, -400px, 0);
  transition: transform 0.0s .45s linear, opacity .35s;
}
#detailList li.first {
  background: #577;
}
#detailList li.middle {
  background: #1e8;
}
#detailList li.last {
  background: #e8b;
}

#detailList.active {
  opacity: 1;
  transition: opacity .30s .5s linear;
  transform: translate3d(0px, 0px, 0);
}

#detailList.activeDirect {
  opacity: 1;
  transition: opacity .30s .5s linear;
  transform: translate3d(0px, 0px, 0);
}

.columns {
  -webkit-columns: 4 250px;
  -moz-columns: 4 250px;
  columns: 4 250px;
}

.img-content {
  margin-left: auto;
  margin-right: auto;
  width: 290px;
  margin-top: 10px;
  margin-bottom: 10px;
  display: block;
}

p {
  margin: 10px;
  font-size: .9em;
}

#map {
    /*z-index: 0;*/
    height: 100%;
    width: 100%;
    position: fixed;
    left: 0px;
    top: 0px;
    transform: translate3d(0, 50px, 0);
    /*transition: transform .35s;*/
}

#map.preview {
  /*top: 160px;*/
 /* transform: translate3d(0, 160px, 0);
  transition: transform .35s;
  height: 100%;*/
}

.expeditionItem {
  width: 160px;
  height: 130px;
  border-style: solid;
  border-color: black;
  border-width: 2px;
  border-radius: 5px;
  background-color: white;
  color: black;
  padding: 10px;
  margin-left: 10px;
  margin-top: 10px;
  text-align: center;
  /*cursor: pointer;*/
  float: left;
  background-image: url(http://upload.wikimedia.org/wikipedia/commons/9/91/Hr._Ms._K_XVIII_%2811_July_1935%29.jpg);
  background-size: 140px 70px;
  background-repeat: no-repeat;
  background-position: 20px 50px;

  -moz-transition: border-radius 1s, border-color 1s;
  -webkit-transition: border-radius 1s, border-color 1s;
}

.previewItemActive {
  border-color: rgb(0, 179, 239);
  border-radius: 20px;
  border-width: 2px;
  -moz-transition: border-radius 1s, border-color 1s;;
  -webkit-transition: border-radius 1s, border-color 1s;;
}

.expeditionPreviewTitle {
  cursor: pointer;
  color: black;
  font-size: 0.9em;
}

.expeditionPreviewSummary {
  /*font-family: "Blokk";*/
  font-size: 0.7em;
  cursor: pointer;
}

.readMore {
  text-align: right;
  font-size: .8em;
  border-radius: 3px;
  float: right;
  padding: 2px;
  position: absolute;
  top: 135px;
  /*left: 30px;*/
  margin-left: 7px;
}

.readMore > a {
  color: gray;
  margin-right: 5px;
  text-align: center;
}

.swiper-container .swiper-slide {
  width: 150px;
}

.swiper-container {
  opacity: 1;
  transform: translate3d(0px, 0px, 0px);
  transition: opacity .5s 1s, transform 0s 1s;
}

.swiper-container.hidden {
  position: absolute;
  transform: translate3d(0px, -500px, 0px);
  opacity: 0;
  transition: opacity .3s, transform 0s .35s;
}

.swiper-free-mode > .swiper-wrapper {
  /*width: 500px;*/
  margin: 0px !important;
}

.expedition-logo {
  background-image: url(../images/icons/wikipedialogo.jpg);
  height: 100px;
  width: 115px;
  background-size: 103px 34px;
  background-repeat: no-repeat;
  background-position: 10px 8px;
}

